syntax = "proto3";
package ink.pmc.common.exchange.proto.lobby2proxy;

import "player/Player.proto";

message ItemDistributeNotify {
  string service_id = 1;
  common.utils.proto.player.Player player = 2;
  repeated string item = 3;
}