syntax = "proto3";
package ink.pmc.utils.proto.operation;

import "operation/Result.proto";

message ResultMessage {
  Result result = 1;
}